webgpu.odin


    @(link_name = "wgpuRenderPassEncoderBeginOcclusionQuery")
    render_pass_encoder_begin_occlusion_query :: proc(render_pass_encoder: Render_Pass_Encoder, query_index: c.uint32_t) ---
    @(link_name = "wgpuRenderPassEncoderBeginPipelineStatisticsQuery")
    render_pass_encoder_begin_pipeline_statistics_query :: proc(render_pass_encoder: Render_Pass_Encoder, query_set: Query_Set, query_index: c.uint32_t) ---
    @(link_name = "wgpuRenderPassEncoderDraw")
    render_pass_encoder_draw :: proc(render_pass_encoder: Render_Pass_Encoder, vertex_count, instance_count, first_vertex, firstInstance: c.uint32_t) ---
    @(link_name = "wgpuRenderPassEncoderDrawIndexed")
    render_pass_encoder_draw_indexed :: proc(render_pass_encoder: Render_Pass_Encoder, index_count, instance_count, firstIndex: c.uint32_t, base_vertex: c.int32_t, first_instance: c.uint32_t) ---
    @(link_name = "wgpuRenderPassEncoderDrawIndexedIndirect")
    render_pass_encoder_draw_indexed_indirect :: proc(render_pass_encoder: Render_Pass_Encoder, indirect_buffer: Buffer, indirect_offset: c.uint64_t) ---
    @(link_name = "wgpuRenderPassEncoderDrawIndirect")
    render_pass_encoder_draw_indirect :: proc(render_pass_encoder: Render_Pass_Encoder, indirect_buffer: Buffer, indirect_offset: c.uint64_t) ---
    @(link_name = "wgpuRenderPassEncoderEnd")
    render_pass_encoder_end :: proc(render_pass_encoder: Render_Pass_Encoder) ---
    @(link_name = "wgpuRenderPassEncoderEndOcclusionQuery")
    render_pass_encoder_end_occlusion_query :: proc(render_pass_encoder: Render_Pass_Encoder) ---
    @(link_name = "wgpuRenderPassEncoderEndPipelineStatisticsQuery")
    render_pass_encoder_end_pipeline_statistics_query :: proc(render_pass_encoder: Render_Pass_Encoder) ---
    @(link_name = "wgpuRenderPassEncoderExecuteBundles")
    render_pass_encoder_execute_bundles :: proc(render_pass_encoder: Render_Pass_Encoder, bundle_count: c.size_t, bundles: ^Render_Bundle) ---
    @(link_name = "wgpuRenderPassEncoderInsertDebugMarker")
    render_pass_encoder_insert_debug_marker :: proc(render_pass_encoder: Render_Pass_Encoder, marker_label: cstring) ---
    @(link_name = "wgpuRenderPassEncoderPopDebugGroup")
    render_pass_encoder_pop_debug_group :: proc(render_pass_encoder: Render_Pass_Encoder) ---
    @(link_name = "wgpuRenderPassEncoderPushDebugGroup")
    render_pass_encoder_push_debug_group :: proc(render_pass_encoder: Render_Pass_Encoder, group_label: cstring) ---
    @(link_name = "wgpuRenderPassEncoderSetBindGroup")
    render_pass_encoder_set_bind_group :: proc(render_pass_encoder: Render_Pass_Encoder, group_index: c.uint32_t, group: Bind_Group, dynamic_offset_count: c.size_t, dynamic_offsets: ^c.uint32_t) ---
    @(link_name = "wgpuRenderPassEncoderSetBlendConstant")
    render_pass_encoder_set_blend_constant :: proc(render_pass_encoder: Render_Pass_Encoder, color: ^Color) ---
    @(link_name = "wgpuRenderPassEncoderSetIndexBuffer")
    render_pass_encoder_set_index_buffer :: proc(render_pass_encoder: Render_Pass_Encoder, buffer: Buffer, format: Index_Format, offset, size: c.uint64_t) ---
    @(link_name = "wgpuRenderPassEncoderSetLabel")
    render_pass_encoder_set_label :: proc(render_pass_encoder: Render_Pass_Encoder, label: cstring) ---
    @(link_name = "wgpuRenderPassEncoderSetPipeline")
    render_pass_encoder_set_pipeline :: proc(render_pass_encoder: Render_Pass_Encoder, pipeline: Render_Pipeline) ---
    @(link_name = "wgpuRenderPassEncoderSetScissorRect")
    render_pass_encoder_set_scissor_rect :: proc(render_pass_encoder: Render_Pass_Encoder, x, y, width, height: c.uint32_t) ---
    @(link_name = "wgpuRenderPassEncoderSetStencilReference")
    render_pass_encoder_set_stencil_reference :: proc(render_pass_encoder: Render_Pass_Encoder, reference: c.uint32_t) ---
    @(link_name = "wgpuRenderPassEncoderSetVertexBuffer")
    render_pass_encoder_set_vertex_buffer :: proc(render_pass_encoder: Render_Pass_Encoder, slot: c.uint32_t, buffer: Buffer, offset, size: c.uint64_t) ---
    @(link_name = "wgpuRenderPassEncoderSetViewport")
    render_pass_encoder_set_viewport :: proc(render_pass_encoder: Render_Pass_Encoder, x, y, width, height, min_depth, max_depth: c.float) ---
    @(link_name = "wgpuRenderPassEncoderReference")
    render_pass_encoder_reference :: proc(render_pass_encoder: Render_Pass_Encoder) ---
    @(link_name = "wgpuRenderPassEncoderRelease")
    render_pass_release :: proc(render_pass_encoder: Render_Pass_Encoder) ---

    // Methods of RenderPipeline


    @(link_name = "wgpuRenderPipelineGetBindGroupLayout")
    render_pipeline_get_bind_group_layout :: proc(render_pipeline: Render_Pipeline, group_index: c.uint32_t) -> Bind_Group_Layout ---
    @(link_name = "wgpuRenderPipelineSetLabel")
    render_pipeline_set_label :: proc(render_pipeline: Render_Pipeline, label: cstring) ---
    @(link_name = "wgpuRenderPipelineReference")
    render_pipeline_reference :: proc(render_pipeline: Render_Pipeline) ---
    @(link_name = "wgpuRenderPipelineRelease")
    render_pipeline_release :: proc(render_pipeline: Render_Pipeline) ---

    // Methods of Sampler


    @(link_name = "wgpuSamplerSetLabel")
    sampler_set_label :: proc(sampler: Sampler, label: cstring) ---
    @(link_name = "wgpuSamplerReference")
    sampler_reference :: proc(sampler: Sampler) ---
    @(link_name = "wgpuSamplerRelease")
    sampler_release :: proc(sampler: Sampler) ---

    // Methods of ShaderModule


    @(link_name = "wgpuShaderModuleGetCompilationInfo")
    shader_module_get_compilation_info :: proc(shader_module: Shader_Module, callback: Compilation_Info_Callback, user_data: rawptr) ---
    @(link_name = "wgpuShaderModuleSetLabel")
    shader_module_set_label :: proc(shader_module: Shader_Module, label: cstring) ---
    @(link_name = "wgpuShaderModuleReference")
    shader_module_reference :: proc(shader_module: Shader_Module) ---
    @(link_name = "wgpuShaderModuleRelease")
    shader_module_release :: proc(shader_module: Shader_Module) ---

    // Methods of Surface


    @(link_name = "wgpuSurfaceGetPreferredFormat")
    surface_get_preferred_format :: proc(surface: Surface, adapter: Adapter) -> Texture_Format ---
    @(link_name = "wgpuSurfaceReference")
    surface_reference :: proc(surface: Surface) ---
    @(link_name = "wgpuSurfaceRelease")
    surface_release :: proc(surface: Surface) ---

    // Methods of SwapChain


    @(link_name = "wgpuSwapChainGetCurrentTextureView")
    swap_chain_get_current_texture_view :: proc(swap_chain: Swap_Chain) -> Texture_View ---
    @(link_name = "wgpuSwapChainPresent")
    swap_chain_present :: proc(swap_chain: Swap_Chain) ---
    @(link_name = "wgpuSwapChainReference")
    swap_chain_reference :: proc(swap_chain: Swap_Chain) ---
    @(link_name = "wgpuSwapChainRelease")
    swap_chain_release :: proc(swap_chain: Swap_Chain) ---

    // Methods of Texture


    @(link_name = "wgpuTextureCreateView")
    texture_create_view :: proc(texture: Texture, descriptor: ^Texture_View_Descriptor) -> Texture_View ---
    @(link_name = "wgpuTextureDestroy")
    texture_destroy :: proc(texture: Texture) ---
    @(link_name = "wgpuTextureGetDepthOrArrayLayers")
    texture_get_depth_or_array_layers :: proc(texture: Texture) -> c.uint32_t ---
    @(link_name = "wgpuTextureGetDimension")
    texture_get_dimension :: proc(texture: Texture) -> Texture_Dimension ---
    @(link_name = "wgpuTextureGetFormat")
    texture_get_format :: proc(texture: Texture) -> Texture_Format ---
    @(link_name = "wgpuTextureGetHeight")
    texture_get_height :: proc(texture: Texture) -> c.uint32_t ---
    @(link_name = "wgpuTextureGetMipLevelCount")
    texture_get_mip_level_count :: proc(texture: Texture) -> c.uint32_t ---
    @(link_name = "wgpuTextureGetSampleCount")
    texture_get_sample_count :: proc(texture: Texture) -> c.uint32_t ---
    @(link_name = "wgpuTextureGetUsage")
    texture_get_usage :: proc(texture: Texture) -> Texture_Usage ---
    @(link_name = "wgpuTextureGetWidth")
    texture_get_width :: proc(texture: Texture) -> c.uint32_t ---
    @(link_name = "wgpuTextureSetLabel")
    texture_set_label :: proc(texture: Texture, label: cstring) ---
    @(link_name = "wgpuTextureReference")
    texture_reference :: proc(texture: Texture) ---
    @(link_name = "wgpuTextureRelease")
    texture_release :: proc(texture: Texture) ---

    // Methods of TextureView


    @(link_name = "wgpuTextureViewSetLabel")
    texture_view_set_label :: proc(texture_view: Texture_View, label: cstring) ---
    @(link_name = "wgpuTextureViewReference")
    texture_view_reference :: proc(texture_view: Texture_View) ---
    @(link_name = "wgpuTextureViewRelease")
    texture_view_release :: proc(texture_view: Texture_View) ---
}
